[package]
name = "ampere-drivers"
version = "0.1.0-rc0"
authors = [ "Hyun Ho Bae" ]
edition = "2021"
description = "Kernel Drivers for Ampere OS"
documentation = "https://docs.rs/ampere-drivers"
readme = "./README.md"
repository = "https://github.com/TheRustUser/ampere-drivers"
license-file = "./LICENSE.md"
keywords = [ "osdev" ]
categories = [ "Operating System" ]

[dependencies]
